syntax = "proto3";
option csharp_namespace = "Web.Api.Identity";
package Web.Api.Identity;
message AccessToken {
    string token = 1;
    int32 expiresIn = 2;
}